# movie-map

./: .dockerignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
app/: main.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: index.html
