[project]
name = "movie-map"
version = "0.1.0"
description = "Simple Flask site that renders a movie poster world map."
requires-python = ">=3.12,<4.0"
dependencies = [
    "Flask==3.0.3",
    "PyYAML==6.0.2",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
